[package]
name = "rust-video-hls-encoder"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
uuid = { version = "1.10.0", features = ["v4"] }
serde = { version = "1.0.210", features = ["derive"] }
derive_more = "0.99.18"
env_logger = "0.11.5"
actix = "0.13.5"
serde_json = "1.0.128"
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
actix-multipart = "0.7.2"
futures = "0.3.30"
http = "0.2.12"
